# triton-vm-prover

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_gpu.cpp  main_gpu_full.cpp  run_gpu_prover.sh  run_gpu_prover_from_dump.sh  run_gpu_prover_server.sh  run_rust_prover_server.sh  run_rust_prover_server_gpu.sh  run_triton_cli_rust_prove_from_dump.sh  run_xnt_core_with_gpu.sh  spin_input21.tasm  spin_input8.tasm  start_prover_server.sh  tasm-lib.patch  triton-vm.patch  xnt-core.patch
include/: bincode_ffi.hpp  chacha12_rng.hpp  stark.hpp  test_data_loader.hpp
include/backend/: backend.hpp  cpu_backend.hpp  cuda_backend.hpp
include/common/: debug_control.hpp
include/fri/: fri.hpp
include/gpu/: cuda_common.cuh  cuda_memory.hpp  device_types.cuh  gpu_proof_config.hpp  gpu_proof_context.hpp  gpu_stark.hpp
include/gpu/kernels/: bezout_kernel.cuh  bfield_kernel.cuh  challenges_kernel.cuh  degree_lowering_generated.cuh  degree_lowering_main_kernel.cuh  extend_kernel.cuh  fiat_shamir_kernel.cuh  fri_kernel.cuh  gather_kernel.cuh  hash_table_constants.cuh  lde_kernel.cuh  merkle_kernel.cuh  ntt_kernel.cuh  phase1_kernel.cuh  poly_mul_kernel.cuh  quotient_kernel.cuh  (+21 more)
include/hash/: tip5.hpp
include/lde/: lde_randomized.hpp  lde_table.hpp
include/merkle/: merkle_tree.hpp
include/ntt/: ntt.hpp
include/parallel/: thread_coordination.h
include/polynomial/: polynomial.hpp
include/proof_stream/: proof_stream.hpp
include/quotient/: quotient.hpp
include/stark/: challenges.hpp  cross_table_arg.hpp
include/table/: extend_helpers.hpp  master_table.hpp  ram_bezout.hpp  table_commitment.hpp  table_padding.hpp
include/types/: b_field_element.hpp  digest.hpp  x_field_element.hpp
include/vm/: aet.hpp  co_processor_call.hpp  op_stack.hpp  processor_columns.hpp  program.hpp  ram_table_call.hpp  u32_table_entry.hpp  underflow_io.hpp  vm.hpp  vm_state.hpp
patch/xnt-core-patch/: CHANGELOG.md  Makefile  cliff.toml
rust/bincode_ffi/: Cargo.toml
rust/degree_lowering_ffi/: Cargo.toml  degree_lowering_table_fixed.rs
rust/degree_lowering_ffi/src/: lib.rs
rust/prover_server/: Cargo.toml
rust/prover_server/src/: lib.rs  main.rs  protocol.rs  prover.rs  server.rs
scripts/: run_and_compare.sh  run_gpu_vs_rust_comparison.sh  verify_component.sh  verify_early_components.sh  verify_proof.sh
src/: chacha12_rng.cpp  standalone_aux_verify.cpp  stark.cpp  test_data_loader.cpp
src/backend/: backend.cpp
src/fri/: fri.cpp
src/gpu/: cuda_backend.cu  cuda_fri.cu  cuda_lde.cu  cuda_memory.cpp  cuda_merkle.cu  cuda_ntt.cu  cuda_quotient.cu  cuda_tip5.cu  gpu_proof_context.cu  gpu_stark.cu  gpu_stark_aux_cpu.cpp
src/hash/: tip5.cpp  tip5.cu
src/lde/: lde_randomized.cpp  lde_table.cpp
src/merkle/: merkle_tree.cpp
src/ntt/: ntt.cpp
src/proof_stream/: proof_stream.cpp
src/prover_server/: CMakeLists.txt  main.cpp  protocol.cpp  protocol.hpp  prover.cpp  prover.hpp  server.cpp  server.hpp
src/quotient/: constraint_evaluations.cpp  constraint_evaluations_xfe_main.cpp  quotient.cpp
src/stark/: challenges.cpp
src/table/: degree_lowering_cpp.cpp  degree_lowering_main_cpp.cpp  extend_helpers.cpp  master_table.cpp  ram_bezout.cpp  table_commitment.cpp  table_padding.cpp
src/tools/: dump_trace.cpp
src/types/: b_field_element.cpp  digest.cpp  x_field_element.cpp
src/vm/: aet.cpp  op_stack.cpp  program.cpp  vm.cpp  vm_state.cpp
tasm-lib/tasm-lib/: Cargo.toml
tests/: test_all_proof_steps.cpp  test_all_steps_verification.cpp  test_aux_tables.cpp  test_b_field_element.cpp  test_compute_and_compare.cpp  test_data_loader.cpp  test_debug_arithmetic.cpp  test_extend_row256.cpp  test_extend_step.cpp  test_fiat_shamir.cpp  test_fri.cpp  test_functional_verification.cpp  test_hash_table_debug.cpp  test_hash_table_manual_debug.cpp  test_io_verification.cpp  test_lde_cases.cpp  test_lde_fixed_seed.cpp  test_lde_full_randomized.cpp  test_lde_randomized_implementation.cpp  test_lde_table_pipeline.cpp  test_lde_verification.cpp  test_lookup_row_count.cpp  test_merkle.cpp  test_ntt.cpp  test_proof_stream.cpp  test_pure_cpp_proof_verification.cpp  test_quotient.cpp  test_rust_ffi_vs_cpp_comparison.cpp  test_stark.cpp  test_step_by_step_comparison.cpp  test_table_commitment.cpp  test_table_padding_verification.cpp  test_tables.cpp  test_tip5.cpp  test_trace_lookup_accumulation.cpp  test_vm_trace_execution.cpp  test_x_field_element.cpp
tests/co_verify/: co_verify_bfield.cpp  co_verify_degree_lowering.cpp  co_verify_extend.cpp  co_verify_fiat_shamir.cpp  co_verify_framework.hpp  co_verify_fri.cpp  co_verify_gather.cpp  co_verify_lde.cpp  co_verify_merkle.cpp  co_verify_ntt.cpp  co_verify_quotient.cpp  co_verify_quotient_constraints.cpp  co_verify_randomized_lde.cpp  co_verify_tip5.cpp  co_verify_xfield.cpp
tests/integration/: gpu_proof_integration_test.cpp
triton-cli-1.0.0/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  debug_proof_generation.rs  dist-workspace.toml
triton-cli-1.0.0/.github/workflows/: coverage.yml  main.yml
triton-cli-1.0.0/examples/: analyze_proof.rs  debug_fri_indices.rs
triton-cli-1.0.0/src/: args.rs  main.rs
triton-cli-1.0.0/src/bin_disabled/: gen_io_tests.rs  gen_lde_fixed_seed.rs  gen_lde_test_cases.rs  gen_randomizer_coeffs.rs  test_bfe_conversion.rs  test_constraint_eval.rs  test_constraint_simple.rs
triton-cli-1.0.0/tests/: integration.rs
triton-cli-1.0.0/wix/: main.wxs
triton-vm/: .gitignore  Cargo.toml  README.md  build.sh  build_cuda_kernels.sh
triton-vm-1.0.0/: Cargo.toml
triton-vm-1.0.0/triton-vm/: Cargo.toml  extract_degree_lowering.rs
triton-vm/built_kernels/: aux_extend.cubin  bfield_ntt.cubin  big_package.cubin  coset_scale.cubin  extract_rows.cubin  quotient_evaluation.cubin  tip5_hash.cubin  xfield_ntt.cubin
triton-vm/tester/: Cargo.toml
triton-vm/tester/src/: main.rs  main_original.rs
triton-vm/triton-vm/: Cargo.toml  build.rs
triton-vm/xnt-core-build/: README.md
xnt-core/: .gitignore  Cargo.toml  README.md
xnt-core/docs/: RUNNING_XNT_CORE_WITH_GPU_PROVER.md
xnt-core/xnt-core/: Cargo.toml
(+178 files in other folders)
