[package]
name = "degree_lowering_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
triton-vm = { path = "../../patch/triton-vm-patch/triton-vm" }
ndarray = { version = "0.17", features = ["rayon", "serde"] }
strum = { version = "0.27", features = ["derive"] }
triton-air = { path = "../../patch/triton-vm-patch/triton-air" }
twenty-first = "1.1.0"
