[package]
name = "prover_server"
version = "0.1.0"
edition = "2021"
description = "Socket-based GPU prover server for Neptune/XNT-Core integration"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "prover-server"
path = "src/main.rs"

[[bin]]
name = "dump-to-vmstate"
path = "src/bin/dump_to_vmstate.rs"

[dependencies]
# Triton VM types (same as bincode_ffi uses)
triton-vm = { path = "../../../triton-vm-1.0.0/triton-vm", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1", features = ["full", "net", "io-util", "sync", "rt-multi-thread", "macros"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# For FFI with C++
libc = "0.2"

[build-dependencies]
cc = "1.0"

