[package]
name = "tester"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
documentation.workspace = true

[dependencies]
rand = "0.8"
triton-vm = { path = "../triton-vm", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tracing = "0.1"
thread-priority = "1.2.0"
tracing-subscriber = "0.3"

[features]
gpu = ["triton-vm/gpu"]

[lints]
workspace = true
